# FMX_Solver

./: CMakeLists.txt  Plan.md  README.md  Theorie.md  out.json  sentman_grid.csv
atm/: Atmosphere.hpp  Combined.hpp  HWM14.cpp  HWM14.hpp  NRLMSIS2.cpp  NRLMSIS2.hpp  StubAtmosphere.cpp
atm/wrappers/: hwm14_cwrap.f90  nrlmsis_cwrap.f90
cli/: fmx.cpp
core/: types.hpp  units.hpp
examples/: config.sample.json  plate.stl
examples/cr313/: cases.json
geom/: BVH.cpp  BVH.hpp  Mesh.cpp  Mesh.hpp  Occluder.hpp
gsi/: CLL.cpp  CLL.hpp  CLLRuntime.cpp  CLLRuntime.hpp  KernelSet.cpp  KernelSet.hpp  Sentman.cpp  Sentman.hpp
scripts/: fetch_models.sh
solver/: PanelSolver.cpp  PanelSolver.hpp  RegimeAdapter.cpp  RegimeAdapter.hpp
tests/: test_cd_cube_dsmc.cpp  test_cll_runtime.cpp  test_cr313.cpp  test_cube.cpp  test_occlusion.cpp  test_sentman.cpp  test_torque.cpp  test_validation.cpp
tools/: gen_gsi_table.cpp
